tests/errors/test_29.x
// Inappropriate dereference of variable

fn main() -> int {

    let mut x: int = 2;

    *x = 21;
}